[package]
name = "binary_size"
version = "0.1.0"
authors = ["Kevin Stenerson <kestred@users.noreply.github.com>"]
edition = "2018"

# workaround for semantic-release-cargo
publish = ["do-not-publish"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["async-stripe/full", "async-stripe/webhook-events"]
runtime-blocking = ["async-stripe/runtime-blocking"]
runtime-async = ["async-stripe/runtime-async-std-surf", "async-std"]
checkout = ["async-stripe/checkout"]
billing = ["async-stripe/billing"]
connect = ["async-stripe/connect"]
fraud = ["async-stripe/fraud"]
issuing = ["async-stripe/issuing"]
orders = ["async-stripe/orders"]
sigma = ["async-stripe/sigma"]
webhook-endpoints = ["async-stripe/webhook-endpoints"]

[dependencies]
async-stripe = { path = "../../", default-features = false }
async-std = { version = "1.7.0", features = ["attributes"], optional = true }
