[package]
edition = "2021"
name = "async_stripe_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
is_sync = ["maybe-async/is_sync"]

[dependencies]
async-trait = "0.1.57"
futures-util = "0.3.24"
http-types = "2.12.0"
hyper = {version = "0.14", optional = true}
maybe-async = "0.2.6"
serde = "1.0.144"
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
serde_qs = "0.10.1"
smart-default = "0.6.0"
smol_str = "0.1.23"
thiserror = "1.0.33"
