[package]
edition = "2021"
name = "async-stripe-hyper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
is_sync = ["maybe-async/is_sync"]

[dependencies]
async-trait = "0.1.57"
async-stripe-core = {version = "0.1.0", path = "../async_stripe_core", features = ["hyper"]}
http-types = {version = "2.12.0", features = ["hyperium_http"]}
hyper = {version = "0.14", default-features = false, features = ["http1", "http2", "client", "tcp"]}
hyper-rustls = {version = "0.22", optional = true}
hyper-tls = {version = "0.5.0", optional = true}
lazy_static = "1.4.0"
maybe-async = "0.2.6"
serde = "1.0.144"
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
serde_qs = "0.10.1"
tokio = "1.20.1"

[dev-dependencies]
async-process = "=1.4.0" # pinned to avoid compile problem
httpmock = "0.6.6"
