[package]
edition = "2021"
name = "async-stripe-surf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.11.0", features = ["attributes"]}
async-trait = "0.1.57"
async-stripe-core = {version = "0.1.0", path = "../async_stripe_core"}
http-types = "2.12.0"
maybe-async = "0.2.6"
serde = "1.0.144"
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
surf = "2.3.2"

[dev-dependencies]
async-process = "=1.4.0" # pinned to avoid compile problem
httpmock = "0.6.6"
