[package]
name = "pagination"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
async-stripe = { path = "../../async-stripe" }
async-stripe-core = { path = "../../generated/async-stripe-core", features = ["customer"] }
