[package]
name = "webhook-actix"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.2.1"
stripe_webhook = { path = "../../stripe_webhook", features = ["stripe_checkout"] }
stripe_checkout = { path = "../../generated/stripe_checkout" }
stripe_connect = { path = "../../generated/stripe_connect" }
