[package]
name = "webhook-axum"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8.8", features = ["macros"] }
async-stripe-webhook = { path = "../../async-stripe-webhook", features = [
    "async-stripe-checkout",
] }
